WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
88659
[BlackBerry] Fix assertion failure introduced by
bug 87551
https://bugs.webkit.org/show_bug.cgi?id=88659
Summary
[BlackBerry] Fix assertion failure introduced by bug 87551
Max Feil
Reported
2012-06-08 08:43:06 PDT
The determineRenderSlider() convenience function added in
bug 87551
made an assumption that wasn't always true. This didn't cause a functional error but it caused an assertion failure, which indicates a problem with the code.
Attachments
Patch
(1.86 KB, patch)
2012-06-08 08:47 PDT
,
Max Feil
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Max Feil
Comment 1
2012-06-08 08:47:39 PDT
Created
attachment 146578
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-08 09:54:39 PDT
Comment on
attachment 146578
[details]
Patch Clearing flags on attachment: 146578 Committed
r119838
: <
http://trac.webkit.org/changeset/119838
>
WebKit Review Bot
Comment 3
2012-06-08 09:54:43 PDT
All reviewed patches have been landed. Closing bug.
Max Feil
Comment 4
2012-11-02 12:44:29 PDT
Closing bug for patch that landed a long time ago.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug