[BlackBerry] Fix assertion failure introduced by bug 87551 https://bugs.webkit.org/show_bug.cgi?id=88659

Patch by Max Feil <mfeil@rim.com> on 2012-06-08
Reviewed by Antonio Gomes.

The determineRenderSlider() convenience function added in bug
87551 made an assumption that wasn't always true. This didn't
cause a functional error but it caused an assertion failure,
which indicates a problem with the code. PR164142.

No new tests because this case is already covered by ASSERT's.

* platform/blackberry/RenderThemeBlackBerry.cpp:
(WebCore::determineRenderSlider):

Canonical link: https://commits.webkit.org/106474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119838 268f45cc-cd09-0410-ab3c-d52691b4dbfc